# sqlite-repr

./: .gitignore  404.html  Cargo.toml  Dioxus.toml  LICENSE  Makefile  README.md  index.html  tailwind.css
.github/workflows/: gh-pages.yml
assets/dioxus/: sqlite-repr.js  sqlite-repr.js.br  sqlite-repr_bg.wasm  sqlite-repr_bg.wasm.br
assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js  inline0.js.br
examples/: big_page
included/: simple
parser/: Cargo.toml
parser/src/: btree.rs  cell.rs  freelist.rs  header.rs  lib.rs  overflow.rs  page.rs  reader.rs  record.rs  varint.rs
src/: lib.rs  main.rs  utils.rs
src/parser/: header.rs  mod.rs  reader.rs
src/ui/: header.rs  home.rs  index.rs  mod.rs  state.rs  viewer.rs
ui/: Cargo.toml  Makefile  README.md  index.html  input.css  package-lock.json  package.json  tailwind.config.js
ui/assets/: tailwind.css
ui/dev/: lines.txt  overflow.txt
ui/included/: freelist_page  interior_table  mixed  overflow_page  table_index_interior  table_index_leaves  two_tables
ui/src/: freelist.rs  header.rs  included_db.rs  index.rs  lib.rs  main.rs  overflow_pages.rs  pages.rs  state.rs  viewer.rs
