[package]
name = "ui"
version = "0.1.0"
authors = ["Victoria Terenina (torymur) <torymur@gmail.com>"]
edition = "2021"


[dependencies]
dioxus = { version = "0.5", features = ["web", "router"] }
hex = {version = "0.4.3"}
wasm-bindgen = {version = "0.2.92"}
parser = {path = "../parser"}

# Debug
dioxus-logger = "0.5.1"
